--- a/style.css
+++ b/style.css
@@ -93,6 +93,15 @@ th{
   background: #e2ae58;
   font-size: 14px;
 }
+th .sort_fields{
+  font-size: 10px;
+}
+button:disabled {
+    background: none;
+}
+button:disabled:hover {
+    background: none;
+}
 #sorted_field{
   cursor: pointer;
 }
@@ -160,12 +169,6 @@ th{
   height: 40px;
   width: 40px;
 }
-button:disabled {
-    background: none;
-}
-button:disabled:hover {
-    background: none;
-}
 #loadingmessage, #no_rides{
   position: absolute;
   top: 40%;
@@ -187,6 +190,7 @@ button:disabled:hover {
   height: 30px;
   width: 30px;
 }
+
 @media only screen and (min-width: 768px){
   section{
     width: 95%;
